# podstawy-programowania

./: CMakeLists.txt
kolokwium/: 1a.cpp
lista1/: zad2a.cpp  zad2b.cpp  zad2c.cpp  zad2d.cpp  zad2e.cpp  zad2f.cpp  zad3a.cpp  zad3b.cpp  zad3c.cpp  zad3d.cpp
lista2/: zad+.cpp  zad1a.cpp  zad1b.cpp  zad1c.cpp  zad1d.cpp  zad1e.cpp
lista3/: zad1a.cpp  zad1b.cpp  zad1c.cpp  zad1d.cpp
lista4/: zad+.cpp  zad1a.cpp  zad1b.cpp  zad1c.cpp  zad1d.cpp  zad1e.cpp
lista5/: zad1a.cpp  zad1b.cpp  zad1c.cpp  zad1d.cpp
lista6/: zad1ac.c  zad1bc.cpp
test/: test.c  test.cpp
