
add_executable(zad1a lista4/zad1a.cpp)
add_executable(zad1b lista6/zad1bc.cpp)
add_executable(zad1c lista4/zad1c.cpp)
add_executable(zad1d lista4/zad1d.cpp)
add_executable(zad1e lista4/zad1e.cpp)
add_executable(zad+ lista4/zad+.cpp)
add_executable(test test/test.cpp)
add_executable(test1 test/test.c)

add_executable(zad1bc lista6/zad1bc.cpp)
add_executable(zad1ac lista6/zad1ac.c)
